dark mode and a few bug fixes

--- a/osekai-ui.css
+++ b/osekai-ui.css
@@ -11,20 +11,24 @@
 
 html,
 body {
-    height: 100%;
+    height: 100vh;
     margin: 0;
     padding: 0;
     scrollbar-width: thin !important;
-    scrollbar-color: #444 #ccc;
+    scrollbar-color: var(--accent) #ddd;
     font-family: 'Comfortaa', arial;
     --accent: #aa66ff;
     --accenttrans: #aa66ffee;
     --accenttranser: #aa66ffaa;
+    --panelbg: #fefefe;
+    --ddd: #ddd;
+    --eee: #eee;
+    --fff: #fff;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
     color: #666;
-    background-color: #eee;
+    background-color: var(--eee);
 }
 
 .oui-button {
@@ -37,7 +41,7 @@ body {
     line-height: 38px;
     border-radius: 8px;
     border: none;
-    color: #ffffff;
+    color: #fff;
     border-radius: 8px;
     background-color: var(--accenttrans);
     filter: drop-shadow(0px 0px 5px #00000022);
@@ -58,12 +62,12 @@ body {
 }
 
 .oui-b-light {
-    background-color: #ffffffdd !important;
+    background-color: #fffd !important;
     color: var(--accent);
 }
 
 .oui-b-light:hover {
-    background-color: #ffffff !important;
+    background-color: var(--fff) !important;
     color: var(--accent);
     filter: drop-shadow(0px 0px 5px #FFFFFF) !important;
 }
@@ -109,10 +113,10 @@ body {
 }
 
 .oui-navlogo {
-    height: 28px;
+    height: 35px !important;
     padding: 0;
     margin: 0;
-    padding-top: 5px;
+    margin-top: 8px !important;
     margin-right: 2px;
 }
 
@@ -145,7 +149,7 @@ body {
     animation: 0.4s cubic-bezier(0, .23, 0, .93) 0s 1 slideup;
     -webkit-transition: all 0.4s cubic-bezier(0, .23, 0, .93) !important;
     margin-bottom: 50px;
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
 @media (max-width:960px) {
@@ -179,19 +183,22 @@ body {
     margin: 0;
     padding: 0;
     line-height: 10px;
-    margin-bottom: 12px;
+    margin-bottom: 30px;
 }
 
 .oui-panel {
     width: 100%;
-    background-color: #fefefe;
+    background-color: var(--panelbg);
     border-radius: 10px;
     filter: drop-shadow(0px 0px 10px #0003);
     transition: all 0.2s cubic-bezier(0, .23, 0, .93);
+    margin-top: 0px;
+    min-height: 50px !important;
 }
 
 .oui-panel-insidecont {
     padding: 30px;
+    min-height: 50px !important;
 }
 
 input[type="radio"] {
@@ -207,7 +214,25 @@ input[type="radio"]+label .oui-radiobutton-true {
     cursor: pointer;
     box-sizing: border-box;
     border-radius: 500px;
-    filter: drop-shadow(0px 0px 1px var(--accent));
+    filter: drop-shadow(0px 0px 0px var(--accent));
+    margin: 0 auto;
+    margin-right: 10px;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"]+label .oui-radiobutton-true {
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+    border: 3px solid var(--accent);
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 500px;
+    filter: drop-shadow(0px 0px 0px var(--accent));
     margin: 0 auto;
     margin-right: 10px;
 }
@@ -239,6 +264,23 @@ input[type="radio"]+label .oui-radiobutton-on {
     opacity: 0;
 }
 
+input[type="checkbox"]+label .oui-radiobutton-on {
+    width: 12px;
+    height: 12px;
+    margin: 0;
+    margin-top: -7px;
+    vertical-align: middle;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 500px;
+    filter: drop-shadow(0px 0px 0px var(--accent));
+    margin-right: 10px;
+    margin: auto auto;
+    transition: all 0.2s cubic-bezier(0, .23, 0, .93);
+    transform: scale(0);
+    opacity: 0;
+}
+
 .oui-radiocont {
     margin-top: 0px;
     margin-bottom: 20px;
@@ -250,9 +292,20 @@ input[type="radio"]+label .oui-radiobutton-on {
     font-weight: 800;
     margin: 0;
     padding: 0;
+    transform: translateY(-20px);
+    position: relative !important;
+    top: 3px;
 }
 
 input[type="radio"]:checked+label .oui-radiobutton-on {
+    opacity: 1;
+    background-color: var(--accent);
+    transform: scale(1);
+    transition: all 0.2s cubic-bezier(0, .23, 0, .93);
+    filter: drop-shadow(0px 0px 4px var(--accent));
+}
+
+input[type="checkbox"]:checked+label .oui-radiobutton-on {
     opacity: 1;
     background-color: var(--accent);
     transform: scale(1);
@@ -267,8 +320,9 @@ input[type="radio"]:checked+label .oui-radiobutton-on {
 .oui-textbox {
     padding: 8px;
     border: none;
-    background-color: #fff;
-    filter: drop-shadow(0 0 6px #0003);
+    background-color: var(--fff);
+    filter: drop-shadow(5px 5px 6px #00000012) drop-shadow(-5px -5px 6px #ABABAB12);
+    border: 1px solid #eee;
     color: var(--accent);
     border-radius: 8px;
     font-size: 16px;
@@ -280,8 +334,28 @@ input[type="radio"]:checked+label .oui-radiobutton-on {
     transition: all 0.2s cubic-bezier(0, .23, 0, .93);
 }
 
+.oui-dropdown {
+    padding: 8px;
+    border: none;
+    background-color: var(--fff);
+    filter: drop-shadow(5px 5px 6px #00000012) drop-shadow(-5px -5px 6px #ABABAB12);
+    border: 1px solid #eee;
+    color: var(--accent);
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 800;
+    font-family: "Comfortaa";
+    display: inline;
+    vertical-align: middle;
+    transition: all 0.2s cubic-bezier(0, .23, 0, .93);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    /* Remove default arrow */
+}
+
 .oui-textbox:focus {
-    background-color: #fff;
+    background-color: var(--fff);
     filter: drop-shadow(0 0 6px var(--accent));
     color: var(--accent);
     transition: all 0.2s cubic-bezier(0, .23, 0, .93);
@@ -319,35 +393,30 @@ input[type="radio"]:checked+label .oui-radiobutton-on {
     bottom: 0;
 }
 
-.oui-dropdown {
-    padding: 8px;
-    border: none;
-    background-color: #fff;
-    filter: drop-shadow(0 0 6px #0003);
-    color: var(--accent);
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 800;
-    font-family: "Comfortaa";
-    display: inline;
-    vertical-align: middle;
-    transition: all 0.2s cubic-bezier(0, .23, 0, .93);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    /* Remove default arrow */
+.osekai-copy {
+    color: white;
+    font-size: 20px;
+    padding-top: 8px;
+    margin-left: 12px;
 }
 
 table {
     border-collapse: collapse;
 }
 
-.oui-table-header-th {
-    text-align: left;
-    padding: 5px;
-    margin-top: 5px !important;
+.oui-table-header-tr {
+    display: flex;
+    table-layout: fixed;
+    margin-bottom: 0px;
     color: var(--accent);
-    font-weight: 800;
+}
+
+.oui-table-header-th {
+    width: 100%;
+    text-align: left;
+    border-bottom: 0px solid black;
+    padding: 5px;
+    background-color: none;
 }
 
 .oui-table-tr {
@@ -362,7 +431,9 @@ table {
     text-align: left;
     border-bottom: 0px solid black;
     padding: 5px;
-    background-color: #eee;
+    background-color: var(--eee);
+    display: flex;
+    align-items: center;
 }
 
 .oui-table {
@@ -382,4 +453,18 @@ table {
 .oui-table-td:last-child {
     border-bottom-right-radius: 8px;
     border-top-right-radius: 8px;
+}
+
+@media (prefers-color-scheme: dark) {
+    html,
+    body {
+        background-color: #121212;
+        --panelbg: #222222;
+        --ddd: #333;
+        --eee: #222222;
+        --fff: #121212;
+    }
+    .oui-navbar {
+        background-color: var(--eee) !important;
+    }
 }
